--- a/Decision Tree/exercise.ipynb
+++ b/Decision Tree/exercise.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 style=\"text-align:center\">🚢Titanic Ship's Survival Outcome Prediction</h2>"
+    "<h2 style=\"text-align:center\">🚢 Predicting Survival Outcomes of Titanic Passengers</h2>"
    ]
   },
   {
