--- a/Salary Prediction for Hiring Candidates/Project.ipynb
+++ b/Salary Prediction for Hiring Candidates/Project.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 style=\"color:green\" align=\"center\"> Salary Prediction for Hiring Candidates</h2>\n"
+    "<h2 style=\"color:green\" align=\"center\"> Machine Learning With Python: Linear Regression Multiple Variables</h2>"
    ]
   },
   {
@@ -12,6 +12,7 @@
    "metadata": {},
    "source": [
     "**hiring.csv** file contains hiring statics for a firm such as experience of candidate, his written test score and personal interview score. Based on these 3 factors, HR will decide the salary. Given this data, you need to build a machine learning model for HR department that can help them decide salaries for future candidates. Using this predict salaries for following candidates,\n",
+    "\n",
     "\n",
     "**2 yr experience, 9 test score, 6 interview score**\n",
     "\n",
@@ -22,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Cleaning\n"
+    "# Data Cleaning"
    ]
   },
   {
@@ -147,7 +148,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"hiring.csv\")\n",
+    "df= pd.read_csv('hiring.csv')\n",
     "df"
    ]
   },
@@ -262,7 +263,7 @@
     }
    ],
    "source": [
-    "df[\"experience\"] = df[\"experience\"].fillna(\"zero\")\n",
+    "df['experience']= df['experience'].fillna('zero')\n",
     "df"
    ]
   },
@@ -280,8 +281,8 @@
     }
    ],
    "source": [
-    "df.experience = df.experience.astype(\"str\")\n",
-    "print(type(df[\"experience\"][5]))"
+    "df.experience= df.experience.astype('str')\n",
+    "print(type(df['experience'][5]))"
    ]
   },
   {
@@ -396,8 +397,7 @@
    ],
    "source": [
     "from word2number import w2n\n",
-    "\n",
-    "df.experience = df[\"experience\"].apply(w2n.word_to_num)\n",
+    "df.experience = df['experience'].apply(w2n.word_to_num)\n",
     "df"
    ]
   },
@@ -418,7 +418,7 @@
     }
    ],
    "source": [
-    "df[\"test_score(out of 10)\"].mean()"
+    "df['test_score(out of 10)'].mean()"
    ]
   },
   {
@@ -439,7 +439,6 @@
    ],
    "source": [
     "import math\n",
-    "\n",
     "math.floor(7.857142857142857)"
    ]
   },
@@ -554,7 +553,7 @@
     }
    ],
    "source": [
-    "df[\"test_score(out of 10)\"] = df[\"test_score(out of 10)\"].fillna(7)\n",
+    "df['test_score(out of 10)']= df['test_score(out of 10)'].fillna(7)\n",
     "df"
    ]
   },
@@ -562,7 +561,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Building a model for prediction\n"
+    "# Building a model for prediction"
    ]
   },
   {
@@ -586,7 +585,7 @@
    ],
    "source": [
     "reg = lm.LinearRegression()\n",
-    "reg.fit(df.drop(\"salary($)\", axis=\"columns\"), df[\"salary($)\"])"
+    "reg.fit(df.drop('salary($)',axis='columns'), df['salary($)'])"
    ]
   },
   {
@@ -654,7 +653,7 @@
     }
    ],
    "source": [
-    "reg.predict([[2, 9, 6]])"
+    "reg.predict([[2,9,6]])"
    ]
   },
   {
@@ -682,7 +681,7 @@
     }
    ],
    "source": [
-    "reg.predict([[12, 10, 10]])"
+    "reg.predict([[12,10,10]])"
    ]
   }
  ],
