--- a/Sk-Learn Digits Dataset with Logistic Regression.ipynb
+++ b/Sk-Learn Digits Dataset with Logistic Regression.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 style='color:blue' align=\"center\">Scikit-Learn Digits Dataset</h2>\n"
+    "<h2 style='color:blue' align=\"center\">Logistic Regression: Multiclass Classification</h2>"
    ]
   },
   {
@@ -17,7 +17,6 @@
    "source": [
     "from sklearn.datasets import load_digits\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
     "digits = load_digits()"
    ]
   },
@@ -397,8 +396,7 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "\n",
-    "df = pd.DataFrame(digits.data, digits.target)\n",
+    "df = pd.DataFrame(digits.data,digits.target)\n",
     "df"
    ]
   },
@@ -406,7 +404,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Features:\n"
+    "## Features:"
    ]
   },
   {
@@ -627,9 +625,9 @@
     }
    ],
    "source": [
-    "plt.gray()  # sets the color map to grayscale.\n",
+    "plt.gray()  #sets the color map to grayscale.\n",
     "for i in range(10):\n",
-    "    plt.matshow(digits.images[i])"
+    "    plt.matshow(digits.images[i]) "
    ]
   },
   {
@@ -653,7 +651,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Labels:\n"
+    "## Labels:"
    ]
   },
   {
@@ -679,7 +677,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 style='color:purple'>Create and train logistic regression model</h2>\n"
+    "<h2 style='color:purple'>Create and train logistic regression model</h2>"
    ]
   },
   {
@@ -719,13 +717,9 @@
    ],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
-    "\n",
     "model = LogisticRegression()\n",
     "from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    digits.data, digits.target, test_size=0.2\n",
-    ")\n",
+    "X_train, X_test, y_train, y_test = train_test_split(digits.data,digits.target, test_size=0.2)\n",
     "model.fit(X_train, y_train)"
    ]
   },
@@ -733,7 +727,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h4 style='color:purple'>Measure accuracy of our model</h4>\n"
+    "<h4 style='color:purple'>Measure accuracy of our model</h4>"
    ]
   },
   {
@@ -780,7 +774,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h4 style='color:purple'>Confusion Matrix</h4>\n"
+    "<h4 style='color:purple'>Confusion Matrix</h4>"
    ]
   },
   {
@@ -821,7 +815,6 @@
    ],
    "source": [
     "from sklearn.metrics import confusion_matrix\n",
-    "\n",
     "cm = confusion_matrix(y_test, y_predicted)\n",
     "cm"
    ]
@@ -854,11 +847,10 @@
    ],
    "source": [
     "import seaborn as sn\n",
-    "\n",
-    "plt.figure(figsize=(10, 7))\n",
+    "plt.figure(figsize = (10,7))\n",
     "sn.heatmap(cm, annot=True)\n",
-    "plt.xlabel(\"Predicted\")\n",
-    "plt.ylabel(\"Truth\")"
+    "plt.xlabel('Predicted')\n",
+    "plt.ylabel('Truth')"
    ]
   }
  ],
